Add comments / revert to java 12